--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,18 @@
 {
-    "builds": [{
-        "src": "runna/runna/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
+    "builds": [
+        {
+            "src": "runna/runna/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
             "dest": "runna/runna/wsgi.py"
         }
-    ]
+    ],
+    "env": {
+        "DJANGO_SETTINGS_MODULE": "runna.runna.settings"
+    }
 }
