--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
         {
             "src": "runna/runna/wsgi.py",
             "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb", "runtime": "python3.12" }
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.12"
+            }
         }
     ],
     "routes": [
@@ -13,6 +16,7 @@
         }
     ],
     "env": {
-        "DJANGO_SETTINGS_MODULE": "runna.runna.settings"
+        "DJANGO_SETTINGS_MODULE": "runna.runna.settings",
+        "PYTHONPATH": "/var/task/runna"
     }
 }
