--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
             "use": "@vercel/python",
             "config": {
                 "maxLambdaSize": "15mb",
-                "runtime": "python3.12"
+                "runtime": "python3.9"
             }
         }
     ],
@@ -16,7 +16,7 @@
         }
     ],
     "env": {
-        "DJANGO_SETTINGS_MODULE": "runna.runna.settings",
-        "PYTHONPATH": "/var/task/runna"
+        "DJANGO_SETTINGS_MODULE": "runna.settings",
+        "PYTHONPATH": "/var/task"
     }
 }
